DDBNEXT-359: Layout issues in Institutionspage

--- a/web-app/css/institutionList.css
+++ b/web-app/css/institutionList.css
@@ -139,12 +139,13 @@ div.sector-facet>label:hover {
 }
 
 .list .institutionlist #filter-title {
-  padding-top: 26px;
+  padding-top: 8px;
+  padding-bottom: 16px;
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
   .list .institutionlist #filter-title {
-    padding-top: 52px !important;
+    padding-bottom: 40px !important;
   }
 }
 
@@ -157,4 +158,32 @@ div.sector-facet>label:hover {
   border-bottom: 2px solid #EFEBE8;
   margin-bottom: 10px;
   padding-bottom: 10px;
+}
+
+.institutionlist .pagination ul {
+    border: none !important;
+    border-radius: none !important;
+    box-shadow: none !important;
+    display: inline-block;
+    margin-bottom: 0;
+    margin-left: 0;
+}
+
+.institutionlist .pagination ul > li > a, .institutionlist .pagination ul > li > span {
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background-color: #FFFFFF;
+  border-color: #DDDDDD;
+  border-image: none;
+  border-style: solid;
+  border-width: 0px 1px 0px 0 !important;
+  float: left;
+  line-height: 20px;
+  text-decoration: none;
+}
+
+.institutionlist div > ol {
+  margin: 0 0 10px 0px !important;
 }
